--- a/app/src/main/res/values/preloaded_fonts.xml
+++ b/app/src/main/res/values/preloaded_fonts.xml
@@ -1,6 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <array name="preloaded_fonts" translatable="false">
+        <item>@font/abril_fatface</item>
         <item>@font/agbalumo</item>
+        <item>@font/akaya_kanadaka</item>
+        <item>@font/amaranth</item>
+        <item>@font/arbutus</item>
+        <item>@font/biorhyme_extralight</item>
     </array>
 </resources>
